controllers/testdata/hxz-ingress-service-expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: hxzdeployment-test
spec:
  selector:
    app: hxzdeployment-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
