controllers/testdata/hxz-nodeport-service-expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: hxzdeployment-test
spec:
  type: NodePort
  selector:
    app: hxzdeployment-test
  ports:
    # 默认情况下，为了方便起见，`targetPort` 被设置为与 `port` 字段相同的值。
    - port: 80
      targetPort: 80
      nodePort: 8080
